# BoilerManager

./: BoilerManager.sln  README.md
BoilerClientPico/: CMakeLists.txt  boiler_client.cpp
BoilerManager/: Program.cs
BoilerManager/Controllers/: BoilerData.cs
BoilerManager/Model/: BoilerMeta.cs  BoilerMetaBase.cs  BoilerMetaResponse.cs
BoilerManager/Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Privacy.cshtml  Privacy.cshtml.cs  _ViewImports.cshtml
BoilerManager/Pages/Shared/: _Layout.cshtml
BoilerManager/Properties/: launchSettings.json
BoilerManager/wwwroot/css/: site.css
BoilerManager/wwwroot/js/: site.js
